servlet: fix threadingTest and update lincheck