@@ -43,7 +43,7 @@ dependencies {
     testImplementation libraries.javax.servlet.api
 
     threadingTestImplementation project(':grpc-servlet'),
-        libraries.truth,
+        libraries.junit,
         libraries.javax.servlet.api,
         libraries.lincheck
 
@@ -69,19 +69,12 @@ dependencies {
             libraries.protobuf.java
 }
 
-tasks.named("test").configure {
-    if (JavaVersion.current().isJava9Compatible()) {
-        jvmArgs += [
-                // required for Lincheck
-                '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
-                '--add-exports=java.base/jdk.internal.util=ALL-UNNAMED',
-        ]
-    }
-}
-
 tasks.register('threadingTest', Test) {
     classpath = sourceSets.threadingTest.runtimeClasspath
     testClassesDirs = sourceSets.threadingTest.output.classesDirs
+    jacoco {
+        enabled = false
+    }
 }
 
 tasks.named("assemble").configure {
